--- a/lab1_styles.css
+++ b/lab1_styles.css
@@ -6,6 +6,8 @@ body {
     font-size: 36pt;
     font-family: sans-serif;
     height: 60px;
+    border-bottom:1px solid gray;
+    padding:10px;
 }
 
 .container {
@@ -14,11 +16,12 @@ body {
 }
 
 .sidebar {
-    width: 180px;
+    width: 130px;
     background: #ff6677;
     position: absolute;
     top: 0;
     height: 100%;
+    padding:10px 15px;
 }
 
 .main-content {
@@ -26,4 +29,7 @@ body {
     position: absolute;
     top: 0;
     left: 200px;
+    border:5px solid blue;
+    margin:5px;
+    padding:10px 15px;
 }
